--- a/intro-to-ci-part-1.ipynb
+++ b/intro-to-ci-part-1.ipynb
@@ -693,7 +693,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
-    "    P(Y \\mid X=1) &= P(Y \\mid do(X=1)) & \\text{Seeing is doing for the general population!}\n",
+    "    E(Y \\mid X=1) &= E(Y \\mid do(X=1)) & \\text{Seeing is doing for the general population!}\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "\n",
@@ -704,7 +704,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
-    "    P(Y \\mid X=1, C=1) &\\neq P(Y \\mid do(X=1), C=1) & \\text{Seeing is *not* doing for that subpopulation!}\n",
+    "    E(Y \\mid X=1, C=1) &\\neq E(Y \\mid do(X=1), C=1) & \\text{Seeing is *not* doing for that subpopulation!}\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "\n",
@@ -713,7 +713,7 @@
     "\n",
     "\\begin{equation}\n",
     "\\begin{aligned}\n",
-    "    P(Y \\mid X=1, C=1, S=1) &= P(Y \\mid do(X=1), C=1, S=1) & \\text{Seeing is doing for that subpopulation!}\n",
+    "    E(Y \\mid X=1, C=1, S=1) &= E(Y \\mid do(X=1), C=1, S=1) & \\text{Seeing is doing for that subpopulation!}\n",
     "\\end{aligned}\n",
     "\\end{equation}\n"
    ]
